# a2a-lab

./: .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/workflows/: insights-audit.js  matrix-honesty-sweep.js
config/: insights.yaml  scenarios.yaml  targets.yaml
deploy/adk/: deploy_adk.py
deploy/agentcore/: Dockerfile  deploy.sh  openai.Dockerfile
deploy/foundry/: provision_foundry.py
deploy/obs/: build_zips.sh  expose_mcp.sh
deploy/shim/: build_zip.sh  deploy_shim.sh  handler.py
deploy/tunnel/: config.yml
plan/: 00-decisions.md  01-architecture.md  02-matrix.md  03-results.md  04-runbooks.md  05-observability.md  06-openai-codex-handoff.md  07-workstreams.md  08-insights.md
salesforce/: sfdx-project.json
salesforce/specs/: a2alabResearchAssistant.yaml
scripts/: export_insights.py  managed_status.py  matrix.py  my_run_local.sh  obs_analysis.py  obs_harvest.py  pg_backfill.py  run_local.sh  setup_brief_agent.py  setup_managed_agent.py  setup_obs_analyst.py  sf_smoke.py  trace_import.py
src/bridge/: __main__.py  app.py
src/briefs/: __main__.py  runner.py  salesforce.py
src/console/: __main__.py  app.py  insights.py
src/interop/: __init__.py  adapter.py  af_channel.py  delegation.py  models.py  registry.py  trace.py
src/obs_mcp/: __init__.py  __main__.py  core.py  http.py  lambda_entry.py  tools.py
src/observability/: __init__.py  adk_source.py  analyst.py  anthropic_source.py  base.py  foundry_source.py  lambda_handlers.py  openai_source.py  pg.py  salesforce_source.py  store.py
tests/: conftest.py
(+109 files in other folders)
