[project]
name = "rc-a2a"
version = "0.1.0"
description = "A2A Interop Lab — cross-platform agent-to-agent experiments over REST, MCP, and A2A"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116,<1",
    "claude-agent-sdk>=0.2,<0.3",
    "a2a-sdk[http-server]>=1.1,<2",
    "mcp>=1.28,<2",
    "fastapi>=0.139,<1",
    "uvicorn>=0.51,<1",
    "httpx>=0.28,<1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pg8000>=1.31",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/interop",
    "src/platforms",
    "src/bridge",
    "src/console",
    "src/observability",
    "src/obs_mcp",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that call external services (need real credentials); deselected by default",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
